--- a/styles.css
+++ b/styles.css
@@ -389,7 +389,7 @@ a.gmail {
 
 footer {
   background-color: white;
-  color: white;
+  color: black;
   bottom: 0;
   width: 100vw;
   font-size: 16px;
