--- a/styles.css
+++ b/styles.css
@@ -117,6 +117,15 @@ body{
 .data{
     background-image: url(photos/hrcav.jpg);
 }
+.ride{
+    background-image: url(photos/461437718_496712040009961_8774762133316347231_n.jpg)
+}
+.event{
+    background-image: url()
+{
+.contact{
+    background-image: url()
+}
 .card h2{
     padding: 10px;
     text-align: center;
