--- a/styles.css
+++ b/styles.css
@@ -121,10 +121,10 @@ body{
     background-image: url(photos/461437718_496712040009961_8774762133316347231_n.jpg)
 }
 .event{
-    background-image: url()
+    background-image: url(photos/map.jpg)
 {
 .contact{
-    background-image: url()
+    background-image: url(photos/hrcav.jpg)
 }
 .card h2{
     padding: 10px;
