--- a/styles.css
+++ b/styles.css
@@ -123,7 +123,7 @@ body{
 .event{
     background-image: url(photos/map.jpg)
 {
-.contact{
+.contacts{
     background-image: url(photos/hrcav.jpg)
 }
 .card h2{
