--- a/styles.css
+++ b/styles.css
@@ -108,7 +108,7 @@ body{
     border-radius: 15px 15px 0 0;
 }
 .cctv{
-    background-image: url(photos/rallies.jpg);
+    background-image: url(photos/461287882_1754509631956775_8323608010758815618_n.jpg);
     
 }
 .alarm{
@@ -121,10 +121,10 @@ body{
     background-image: url(photos/461437718_496712040009961_8774762133316347231_n.jpg)
 }
 .event{
-    background-image: url(photos/map.jpg)
+    background-image: url(photos/461447836_526858746604849_2328119789211788075_n.jpg)
 }
 .contacts{
-    background-image: url(photos/hrcav.jpg)
+    background-image: url(photos/461491943_1645465729647430_3836046572266184125_n.jpg)
 }
 .card h2{
     padding: 10px;
