--- a/styles.css
+++ b/styles.css
@@ -123,7 +123,7 @@ body{
 .event{
     background-image: url(photos/461447836_526858746604849_2328119789211788075_n.jpg)
 }
-.contacts{
+.contacting{
     background-image: url(photos/461491943_1645465729647430_3836046572266184125_n.jpg)
 }
 .card h2{
